Ajout de la colonne Zip

--- a/src/main/webapp/customerList.xhtml
+++ b/src/main/webapp/customerList.xhtml
@@ -30,15 +30,15 @@
         </h:column>
         <h:column>
             <f:facet name="header">
-                <h:outputText value="Code de réduction"/>
+                <h:outputText value="Réduction"/>
             </f:facet>
-            <h:outputText value="#{item.discount.code}"/>
+            <h:outputText value="#{item.discount.code} : #{item.discount.rate} %" />
         </h:column>
         <h:column>
             <f:facet name="header">
-                <h:outputText value="Valeur de réduction"/>
+                <h:outputText value="Zip"/>
             </f:facet>
-            <h:outputText value="#{item.discount.rate}"/>
+            <h:outputText value="#{item.zip.zipCode}" />
         </h:column>
     </h:dataTable>
 </html>
