--- a/src/main/webapp/customerList.xhtml
+++ b/src/main/webapp/customerList.xhtml
@@ -24,6 +24,18 @@
                 </f:facet>
                 <h:outputText value="#{item.name}"/>
             </p:column>
+            <p:column>
+                <f:facet name="header">
+                    <h:outputText value="Addresse 1"/>
+                </f:facet>
+                <h:outputText value="#{item.addressline1}"/>
+            </p:column>
+            <p:column>
+                <f:facet name="header">
+                    <h:outputText value="Addresse 2"/>
+                </f:facet>
+                <h:outputText value="#{item.addressline2}"/>
+            </p:column>
             <p:column sortBy="#{item.city}">
                 <f:facet name="header">
                     <h:outputText value="Ville"/>
@@ -35,6 +47,30 @@
                     <h:outputText value="Etat"/>
                 </f:facet>
                 <h:outputText value="#{item.state}"/>
+            </p:column>
+            <p:column>
+                <f:facet name="header">
+                    <h:outputText value="Telephone"/>
+                </f:facet>
+                <h:outputText value="#{item.phone}"/>
+            </p:column>
+            <p:column>
+                <f:facet name="header">
+                    <h:outputText value="Fax"/>
+                </f:facet>
+                <h:outputText value="#{item.fax}"/>
+            </p:column>
+            <p:column>
+                <f:facet name="header">
+                    <h:outputText value="Email"/>
+                </f:facet>
+                <h:outputText value="#{item.email}"/>
+            </p:column>
+            <p:column>
+                <f:facet name="header">
+                    <h:outputText value="Limite de credit"/>
+                </f:facet>
+                <h:outputText value="#{item.creditLimit}"/>
             </p:column>
             <p:column>
                 <f:facet name="header">
