--- a/src/main/webapp/customerList.xhtml
+++ b/src/main/webapp/customerList.xhtml
@@ -11,12 +11,19 @@
         Here's all the customers
     </h:body>
     <h:form>
-        <p:dataTable value="#{customerBean.customers}" var="item" paginator="true" rows="10" >
+        <p:dataTable value="#{customerBean.customers}" var="item" widgetVar="customerTable" emptyMessage="Aucun client avec ce critère" paginator="true" rows="10" >
+            <f:facet name="header">
+                <p:outputPanel>
+                   <h:outputText value="Recherche dans tous les champs de recherche"/>
+                   <p:inputText id="globalFilter" onkeyup="PF('customerTable').filter()"
+                                style="width:150px"/>
+                </p:outputPanel>
+             </f:facet>
             <p:column>
                 <f:facet name="header">
                     <h:outputText value="Id"/>
                 </f:facet>
-                <h:outputText value="#{item.customerId}"/>
+                <h:link outcome="customerDetails?idCustomer=#{item.customerId}" value="#{item.customerId}"/>
             </p:column>
             <p:column sortBy="#{item.name}" filterBy="#{item.name}">
                 <f:facet name="header">
